--- a/package.json
+++ b/package.json
@@ -47,9 +47,13 @@
     }
   },
   "dependencies": {
+    "aws-sdk": "^2.437.0",
+    "body-parser": "^1.18.3",
     "electron-compile": "^6.4.4",
     "electron-devtools-installer": "^2.1.0",
+    "electron-log": "^3.0.5",
     "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^3.0.0-beta.6",
