--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,9 @@
     "import/no-unresolved": [2, { "ignore": ["electron"] }],
     "linebreak-style": 0,
     "react/prefer-stateless-function": 0
+  },
+  "env" :{
+    "browser": true,
+    "node": true
   }
 }
