--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "electron-log": "^3.0.5",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.16.4",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^3.0.0-beta.6",
