--- a/package.json
+++ b/package.json
@@ -50,16 +50,19 @@
     "aws-sdk": "^2.437.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "connected-react-router": "^6.4.0",
     "electron-compile": "^6.4.4",
     "electron-devtools-installer": "^2.1.0",
     "electron-log": "^3.0.5",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.16.4",
+    "history": "^4.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
