SQS-0026: Try to publish on S3

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
       "electronInstallerDebian": {},
       "electronInstallerRedhat": {},
       "github_repository": {
-        "owner": "",
-        "name": ""
+        "owner": "rgaquino",
+        "name": "sqs-client"
       },
       "windowsStoreConfig": {
         "packageName": "",
