SQS-0026: Try publishing to S3

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ addons:
     packages:
       - fakeroot
       - rpm
-  artifacts: true
+  artifacts: 
+    region:  "ap-southeast-1"
+    working_dir: out
 
 install:
   - npm install
